--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -124,6 +124,9 @@ footer {
     outline: none;
     padding-left: 16px;
     margin-right: 12px;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus {border-color: $accent-text-color;}
     &placeholder {
