--- a/sass/layout/_work-list-section.scss
+++ b/sass/layout/_work-list-section.scss
@@ -46,9 +46,6 @@
     flex-basis: calc((100% - 60px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover, &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
     &:nth-child(3n) {
     margin-right: 0;
     }
@@ -86,9 +83,14 @@
 
 .work-list__link {
     display: block;
+    &:hover,
+        &:focus {
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
     &:hover .work-list__description, &:focus .work-list__description {
     transform: translateY(0);
     }
+    
 }
 
 .work-list__text-border {
